<resources>
    <string name="app_name">KOUBitirme</string>


    <string name="login">LogIn</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">Detail</string>
    <string name="listt">listt</string>
    <string name="error_try_again">Error! Try Again</string>
    <string name="loading">loading</string>
    <string name="mama_ba">Mama Bağışı</string>
    <string name="sahiplen">Sahiplen</string>
    <string name="animal_name">Animal Name</string>
    <string name="animal_breed">Animal Breed</string>
    <string name="docile">Docile</string>
    <string name="education">Education</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="talebiniz_bar_na_a_iletilmi_tir">Talebiniz barınağa iletilmiştir</string>


</resources>
