<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <ImageView
        android:id="@+id/animalImage"
        android:layout_width="135dp"
        android:layout_height="97dp"
        app:srcCompat="@drawable/paw"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="29dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="TODO" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/animalImage"
        android:id="@+id/linearlayout1"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/editText"
            android:layout_width="171dp"
            android:layout_height="43dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/animal_name"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="141dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="170dp"
            android:layout_height="43dp"
            android:text="TextView"
            tools:layout_editor_absoluteX="212dp"
            tools:layout_editor_absoluteY="141dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout1"
        android:id="@+id/linearlayout2"
        android:layout_centerVertical="true">
        <EditText
            android:id="@+id/editText2"
            android:layout_width="167dp"
            android:layout_height="51dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/animal_breed"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="206dp" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:text="TextView"
            tools:layout_editor_absoluteX="212dp"
            tools:layout_editor_absoluteY="206dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout2"
        android:id="@+id/linearlayout3"
        android:layout_centerVertical="true">
        <EditText
            android:id="@+id/editText3"
            android:layout_width="173dp"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/docile"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="269dp" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="165dp"
            android:layout_height="41dp"
            android:text="TextView"
            tools:layout_editor_absoluteX="212dp"
            tools:layout_editor_absoluteY="269dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout4"
        android:layout_below="@id/linearlayout3"
        android:layout_centerVertical="true">
        <EditText
            android:id="@+id/editText4"
            android:layout_width="171dp"
            android:layout_height="41dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="332dp" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="163dp"
            android:layout_height="40dp"
            android:text="TextView"
            tools:layout_editor_absoluteX="216dp"
            tools:layout_editor_absoluteY="330dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout5"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_below="@id/linearlayout4"
        android:layout_centerVertical="true">
        <EditText
            android:id="@+id/editText5"
            android:layout_width="177dp"
            android:layout_height="44dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="385dp" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="165dp"
            android:layout_height="44dp"
            android:text="TextView"
            tools:layout_editor_absoluteX="212dp"
            tools:layout_editor_absoluteY="385dp" />
    </LinearLayout>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/linearlayout5"
       android:layout_marginLeft="25dp"
       android:layout_marginRight="25dp"
       android:layout_marginTop="300dp">
       <Button
           android:id="@+id/button1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="0dp"
           android:layout_marginTop="0dp"
           android:layout_marginEnd="0dp"
           android:layout_marginBottom="0dp"
           android:text="@string/mama_ba"
           android:layout_alignParentRight="true"
           android:layout_centerVertical="true" />
       <Button
           android:id="@+id/button2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="0dp"
           android:layout_marginStart="50dp"
           android:layout_marginTop="50dp"
           android:text="@string/sahiplen"
           android:layout_alignStart="@id/button1"
           android:layout_toEndOf="@id/button1"
           android:layout_alignParentLeft="true"
           android:layout_centerVertical="true" />
   </RelativeLayout>

</RelativeLayout>